cabal-version:      3.0
name:               miso-optics
version:            0.1.0.0
synopsis:           An adaptor package for using miso with optics.
description:        This package provides optics-compatible Binding combinators for miso
homepage:           https://github.com/haskell-miso/miso-optics
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          dmjio (c) 2026
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:
    warnings
  exposed-modules:
    Miso.Optics
  build-depends:
    base < 5,
    optics < 0.5,
    miso >= 1.9 && < 1.10
  hs-source-dirs:
    src
  default-language:
    Haskell2010
